# stac-recipes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ci/requirements/: docs.yaml  environment.yaml
docs/: collections.md  conf.py  design.md
examples/: cmems_insitu_tac_https.py  sst_glo_phy_l3s_my_010_039.py
examples/recipes/avhrr_sst_metop-b_osisaf-l2p/: collections.yaml  recipe.py
examples/recipes/pgstac/: collections.yaml
stac_recipes/: __init__.py  patterns.py  readers.py  transforms.py  writers.py
stac_recipes/writers/: json.py  pgstac.py
